--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,9 +17,9 @@
           src="/static/img/portfolio/avatar.png"
           alt="avatar"
         />
-        <h1 class="text-uppercase mb-0">Travez Ripley</h1>
+        <h1 class="text-uppercase mb-0">Salil Gurung</h1>
         <hr class="star-light" />
-        <h2 class="font-weight-light mb-0">Front-End Web Developer</h2>
+        <h2 class="font-weight-light mb-0">Full-Stack Web Developer</h2>
       </div>
     </header>
 
