--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-md-4 mb-5 mb-lg-0">
         <h4 class="text-uppercase mb-4">Location</h4>
-        <p class="lead mb-0">San Diego, CA</p>
+        <p class="lead mb-0">Reading, UK</p>
       </div>
       <div class="col-md-4 mb-5 mb-lg-0">
         <h4 class="text-uppercase mb-4">Get to know the digital me.</h4>
@@ -11,7 +11,7 @@
           <li class="list-inline-item">
             <a
               class="btn btn-outline-light btn-social text-center rounded-circle"
-              href="https://github.com/travezripley"
+              href="https://github.com/salilgrg"
             >
               <i class="fab fa-fw fa-github"></i>
             </a>
@@ -19,7 +19,7 @@
           <li class="list-inline-item">
             <a
               class="btn btn-outline-light btn-social text-center rounded-circle"
-              href="https://www.linkedin.com/in/travezripley/"
+              href="https://www.linkedin.com/in/salil-gurung-676433122/"
             >
               <i class="fab fa-fw fa-linkedin-in"></i>
             </a>
@@ -39,6 +39,6 @@
 
 <div class="copyright py-4 text-center text-white">
   <div class="container">
-    <small>Copyright &copy; 2019 Travez Ripley - All Rights Reversed</small>
+    <small>Copyright &copy; 2019 Salil Gurung - All Rights Reversed</small>
   </div>
 </div>
