--- a/views/index.ejs
+++ b/views/index.ejs
@@ -183,16 +183,15 @@
         <div class="row">
           <div class="col-lg-4 ml-auto">
             <p class="lead">
-              Creative Front-End Web Developer with the ability to coordinate
-              detail oriented large scale projects, motivated with a passion to
-              execute and implement tools necessary for success.
+              A BSc Computing Graduate working as Junior Full Stack Software Developer at PetrolPrices 
+              possessing strong technical knowledge with the ability to isolate and solve problems as 
+              well as excellent communication skills and having the ability to communicate professionally 
+              with colleagues and clients. 
             </p>
           </div>
           <div class="col-lg-4 mr-auto">
             <p class="lead">
-              A Regular in the San Diego JavaScript community. Please Check out
-              more of my projects on GitHub (github.com/travezripley), and
-              Follow my Journey on Youtube.
+              Currently exploring the different departments in developing. 
             </p>
           </div>
         </div>
